--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,23 @@
 body{
     margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    background: #fafafa;
 }
 /* HEADER */
 .header .container-header{
     width: 100%;
+    max-height: 54px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    border-bottom: 1px solid #dbdbdb;
+    margin-bottom: 50px;
+    position: fixed;
+    z-index: 100;
+    background: #fff;
+    box-sizing: border-box;
 }
 .btn-search{
     background: #fafafa;
@@ -16,8 +26,10 @@ body{
     height: 30px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     border: 1px solid #dbdbdb;
+    padding-left: 10px;
+    margin: 0 135px;
 }
 .btn-search i{
     color: #a5a7aa;
@@ -35,6 +47,155 @@ body{
     color: #8e8e8e;
     padding-left: 5px;
     font-size: 13px;
+}
+/* PERFIL */
+.profile{
+    padding-top: 90px;
+    display: flex;
+    width: 100%;
+    padding-left: 235px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+.profile-photo{
+    padding-right: 80px;
+}
+.profile-photo img{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.profile-information{
+    display: flex;
+}
+.profile-information p{
+    font-size: 28px;
+    margin-right: 20px;
+    font-weight: 100;
+}
+.profile-information button{
+    background-color: transparent;
+    border: 1px solid #dbdbdb;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    width: 90px;
+    height: 30px;
+    font-weight: bold;
+    align-self: center;
+    margin-right: 20px;
+}
+.profile-information img{
+    width: 35px;
+    height: 35px;
+    align-self: center;
+}
+.profile-follow{
+    display: flex;
+    margin-top: -20px;
+    font-weight: 100;
+    font-size: 16px;
+    color: #262626;
+    letter-spacing: 0.5px;
+}
+.p-publication{
+    padding-right: 50px;
+}
+.p-followers{
+    padding-right: 50px;
+}
+span{
+    font-weight: 500;
+}
+.profile-description p{
+    margin: 5px;
+}
+/* HISTORIAS */
+.container-history{
+    margin-left: 200px;
+}
+.container-navigation{
+    height: 53px;
+    width: 920px;
+    border-top: 1px solid #e6e6e6;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+.container-navigation ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: inherit;
+}
+.container-navigation ul li{
+    margin-right: 60px;
+    height: inherit;
+    
+}
+.container-navigation ul li:last-child{
+    margin-right: 0;
+}
+.container-navigation ul li a{
+    display: flex;
+    align-items: center;
+    height: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #262626;
+    font-weight: 100;
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+.container-navigation ul li:first-child a{
+    border-top: 1px solid #262626;
+    margin-top: -1px;
+}
+.container-navigation ul li:nth-last-child(-n+3) a{
+    color: #6b6b6b;
+}
+.container-navigation ul li:first-child a::before{
+    content: '';
+    width: 16px;
+    height: 16px;
+    background: url('../img/grid.PNG');
+    display: inline-block;
+    margin-right: 10px;
+}
+.container-navigation ul li:first-child a::before{
+    content: '';
+    width: 16px;
+    height: 16px;
+    background: url('../img/grid.PNG');
+    display: inline-block;
+    margin: -2px 5px 0 0;
+}
+.container-navigation ul li:nth-child(2) a::before{
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('../img/igtv.PNG');
+    display: inline-block;
+    margin: -2px 5px 0 0;
+}
+.container-navigation ul li:nth-child(3) a::before{
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('../img/Guardadas.PNG');
+    display: inline-block;
+    margin: 0px 5px 0 0;
+}
+.container-navigation ul li:last-child a::before{
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('../img/etiquetadas.PNG');
+    display: inline-block;
+    margin: -2px 5px 0 0;
 }
 .post-list{
     display: grid;
